# soft-engg-project-may-2025-se-May-11

./: .env  .gitignore  .pre-commit-config.yaml  .python-version  README.md  dev.sh  install.sh  openapi.json  package-lock.json
.github/: CODEOWNERS
.github/workflows/: flask-api-tests.yml  lint-test.yml
backend/: .env.example  .gitignore  API_README.md  README.md  add_roles.py  app.py  app_factory.py  appointment.py  celery_app.py  celery_worker_entrypoint.py  celerybeat-schedule.db  config.py  db_session.py  extensions.py  jwt_flask_security_bridge.py  models.py  pyproject.toml  pyproject.toml.bak  scheduler.py  script.py  tasks.py  test_config.py  test_emergency_alert.py  test_reminder.py  test_voic.py  voice_utils.py  workers.py
backend/db/: db_session.py
backend/instance/: senior_citizen.db
backend/routes/: accessibility.py  api_v1.py  appointments.py  auth.py  caregiver_assignment.py  caregiver_chat.py  chat.py  emergency.py  emergency_contacts.py  events.py  medications.py  news.py  oauth.py  profile.py  providers.py  reminder.py  reports.py  voice.py  voice_assistant.py
backend/schemas/: accessibility.py  appointments.py  auth.py  emergency_contact.py  medication.py  profile.py  reminder.py  reports.py
backend/tests/: conftest.py  test_appointments.py  test_auth.py  test_emergency.py  test_emergency_contacts.py  test_events.py  test_medications.py  test_news.py  test_oauth.py  test_profile.py  test_providers.py  test_reminder.py
backend/utils/: action_resolver.py  add_roles.py  ai_manager.py  caregiver_chat_manager.py  jwt_flask_security_bridge.py  message.py  notification.py  oauth_setup.py  scheduler.py  text_extractor.py  voice_assistant_manager.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AppointmentsSection.vue  CaregiverChatbot.vue  ChangePasswordForm.vue  Chatbot.vue  EmergencyContactForm.vue  EmergencyContactSection.vue  EventForm.vue  MedScheduleRowItem.vue  MedicationForm.vue  MedicationItem.vue  MedicationsSection.vue  NewsFeedSection.vue  ScheduleRowItem.vue  SeniorCard.vue  SocialHubSection.vue  StatCard.vue  TopNavBar.vue  TopNavBarCaregiver.vue  TopNavBarProvider.vue  VoiceAssistantButton.vue
frontend/src/composables/: useAvatar.js
frontend/src/router/: index.js
frontend/src/services/: accessibilityService.js  apiClient.js  appointmentService.js  authService.js  caregiverChatService.js  caregiverService.js  chatService.js  emergencyService.js  eventService.js  medicationService.js  mockApiService.js  newsService.js  profileService.js  providerService.js  reminderService.js  reportService.js  socialService.js  timeutils.js  voiceAssistantService.js
frontend/src/store/: caregiverStore.js  emergencyContactStore.js  emergencyStore.js  eventStore.js  medicationStore.js  newsFeedStore.js  notificationStore.js  providerStore.js  scheduleStore.js  socialHubStore.js  userStore.js
instance/: senior_citizen.db
(+19 files in other folders)
