[project]
name = "backend"
version = "0.1.0"
description = "Flask API for the senior-citizen app"
authors = [
    {name = "RNA"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.1"
]

[tool.poetry]
packages = [
    { include = "app.py" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
