[tool.poetry]
name = "senior-citizen-backend"
version = "0.1.0"
description = "Flask API for the senior-citizen app"
authors = ["RNA <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "app.py" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.1.1"
gunicorn = ">=23.0.0,<24.0.0"
sqlalchemy = ">=1.4"
flask_jwt_extended = "^4.6.0"
bcrypt = "^4.1.2"
flasgger = "^0.9.7.1"
flask-smorest = "^0.44.0"
marshmallow = "^3.20.2"
apispec = "^6.3.0"
apispec-webframeworks = "^0.5.2"
flask-security-too = "^5.6.2"
flask-sqlalchemy = "^3.1.1"
apscheduler = "^3.11.0"
twilio = "^9.6.4"
authlib = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "*"
ruff = "*"


[mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
